objects/QIDC__MDM_LookupType_Translation_ims__c.object
<CustomObject>
    <description>To store Translations of Lookup types</description>
    <fields>
        <fullName>QIDC__ISO_Language_Code_ims__c</fullName>
        <description>To store Language ISO Code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To store Language ISO Code</inlineHelpText>
        <label>ISO Language Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Label_ims__c</fullName>
        <description>Translated Value for Lookup type</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Translated Value for Lookup type</inlineHelpText>
        <label>Label</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__MDM_LookupType__c</fullName>
        <description>Parent Lookup Type Record Name</description>
        <inlineHelpText>Parent Lookup Type Record Name</inlineHelpText>
        <label>MDM LookupType</label>
        <referenceTo>QIDC__MDM_LookupType_ims__c</referenceTo>
        <relationshipLabel>MDM LookupType Translations</relationshipLabel>
        <relationshipName>MDM_LookupTypes_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__Translation_External_Key_ims__c</fullName>
        <description>Unique ID as external key</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID as external key</inlineHelpText>
        <label>Translation External Key</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MDM LookupType Translation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM LookupType Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>